Добавил swagger документацию.
