# internal/cards/delivery/http/delivery.go
@@ -43,6 +43,21 @@ func RegisterHandlers(mux *mux.Router, uc pCards.Usecase, log *zap.Logger, check
 	mux.HandleFunc(cardPath, checkAuth(del.delete)).Methods(http.MethodDelete)
 }
 
+// create godoc
+//
+//	@Summary		Create a new card
+//	@Description	Create a new card
+//	@Tags			cards
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		int			true	"List ID"
+//	@Param			ListCreateData	body		createRequest	true	"List create data"
+//	@Success		200					{object}	createResponse	"Created card data."
+//	@Failure		400					{object}	http.JSONError
+//	@Failure		401					{object}	http.JSONError
+//	@Failure		405
+//	@Failure		500
+//	@Router			/lists/{id}/cards [post]
 func (del *delivery) create(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	listID, err := strconv.Atoi(vars["id"])
@@ -80,6 +95,19 @@ func (del *delivery) create(w http.ResponseWriter, r *http.Request) {
 	pHTTP.SendJSON(w, r, http.StatusOK, response)
 }
 
+// cardByList godoc
+//
+//	@Summary		Returns cards by card id
+//	@Description	Returns cards by card id
+//	@Tags			cards
+//	@Produce		json
+//	@Param			id	path		int			true	"Board ID"
+//	@Success		200	{object}	cardResponse	"Lists data"
+//	@Failure		400	{object}	http.JSONError
+//	@Failure		401	{object}	http.JSONError
+//	@Failure		405
+//	@Failure		500
+//	@Router			/cards/{id}/cards [get]
 func (del *delivery) listByList(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	listID, err := strconv.Atoi(vars["id"])
@@ -94,10 +122,23 @@ func (del *delivery) listByList(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	response := newCardResponse(cards)
+	response := newListResponse(cards)
 	pHTTP.SendJSON(w, r, http.StatusOK, response)
 }
 
+// list godoc
+//
+//	@Summary		Returns cards by list id
+//	@Description	Returns cards by list id
+//	@Tags			cards
+//	@Produce		json
+//	@Param			title	query		string			true	"Title filter"
+//	@Success		200	{object}	cardResponse	"Lists data"
+//	@Failure		400	{object}	http.JSONError
+//	@Failure		401	{object}	http.JSONError
+//	@Failure		405
+//	@Failure		500
+//	@Router			/cards [get]
 func (del *delivery) list(w http.ResponseWriter, r *http.Request) {
 	userID, ok := r.Context().Value(mw.ContextUserID).(int)
 	if !ok {
@@ -113,10 +154,24 @@ func (del *delivery) list(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	response := newCardResponse(cards)
+	response := newListResponse(cards)
 	pHTTP.SendJSON(w, r, http.StatusOK, response)
 }
 
+// get godoc
+//
+//	@Summary		Returns card by id
+//	@Description	Returns card by id
+//	@Tags			cards
+//	@Produce		json
+//	@Param			id	path		int			true	"Card ID"
+//	@Success		200	{object}	getResponse	"Card data"
+//	@Failure		400	{object}	http.JSONError
+//	@Failure		401	{object}	http.JSONError
+//	@Failure		404	{object}	http.JSONError
+//	@Failure		405
+//	@Failure		500
+//	@Router			/cards/{id} [get]
 func (del *delivery) get(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	cardID, err := strconv.Atoi(vars["id"])
@@ -135,6 +190,21 @@ func (del *delivery) get(w http.ResponseWriter, r *http.Request) {
 	pHTTP.SendJSON(w, r, http.StatusOK, response)
 }
 
+// partialUpdate godoc
+//
+//	@Summary		Partial update of card
+//	@Description	Partial update of card
+//	@Tags			cards
+//	@Accept			json
+//	@Produce		json
+//	@Param			id					path		int						true	"Card ID"
+//	@Param			ListUpdateData	body		partialUpdateRequest	true	"Card data to update"
+//	@Success		200					{object}	getResponse				"Updated card data."
+//	@Failure		400					{object}	http.JSONError
+//	@Failure		401					{object}	http.JSONError
+//	@Failure		405
+//	@Failure		500
+//	@Router			/cards/{id}  [patch]
 func (del *delivery) partialUpdate(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	cardID, err := strconv.Atoi(vars["id"])
@@ -184,6 +254,20 @@ func (del *delivery) partialUpdate(w http.ResponseWriter, r *http.Request) {
 	pHTTP.SendJSON(w, r, http.StatusOK, response)
 }
 
+// delete godoc
+//
+//	@Summary		Delete card by id
+//	@Description	Delete card by id
+//	@Tags			cards
+//	@Produce		json
+//	@Param			id	path	int	true	"Card ID"
+//	@Success		204	"Card deleted successfully"
+//	@Failure		400	{object}	http.JSONError
+//	@Failure		401	{object}	http.JSONError
+//	@Failure		404	{object}	http.JSONError
+//	@Failure		405
+//	@Failure		500
+//	@Router			/cards/{id} [delete]
 func (del *delivery) delete(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	cardID, err := strconv.Atoi(vars["id"])
